fixed bleeding at under 800 height

--- a/style.css
+++ b/style.css
@@ -166,7 +166,18 @@ body {
     left: 58%;
 }
 
-.player_key_display,
+.player_key_display
+{
+    height: 18%;
+    width: 30%;
+    z-index: 5;
+    background-size: 85%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 25px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .player_hpAndPower {
     height: 18%;
     width: 25%;
@@ -614,7 +625,14 @@ div.player_box.tablet_player_box {
 
 
 /*Media queries and responsive design*/
-
+@media only screen and (min-height:850px){
+    .player_box{
+        width:90%;
+    }
+    .player_key_display{
+        width:35%;
+    }
+}
 @media only screen and (min-width: 1024px) {
     body {
         /* overflow: hidden; */
@@ -642,7 +660,7 @@ div.player_box.tablet_player_box {
         font-size: 11px;
     }
     .player_box {
-        width: 70%;
+        width: 65%;
     }
 }
 
@@ -686,6 +704,9 @@ div.player_box.tablet_player_box {
     .player_hpAndPower {
         font-size: 12px;
     }
+    .player_key_display{
+        width:25%;
+    }
 }
 
 @media only screen and (min-width: 1520px) {
@@ -708,10 +729,10 @@ div.player_box.tablet_player_box {
         font-size: 20px;
     }
     .player_box {
-        width: 55%;
+        width: 50%;
     }
     .player_key_display {
-        height: 23%;
+        height: 20%;
     }
     .player_icon {
         width: 5%;
@@ -726,7 +747,7 @@ div.player_box.tablet_player_box {
         width: 60%;
     }
     .player_box {
-        width: 50%;
+        width: 45%;
     }
     .tablet_arrows {
         width: 80%;
